--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="recordsCompany.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="rankTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="mainWet2.cpp">
